fix margins and gaps between starters/dishes/desserts sections and between themselves

--- a/sass/pages/_menuPage.scss
+++ b/sass/pages/_menuPage.scss
@@ -221,7 +221,6 @@
                         padding-right: 20px;
                         padding-bottom: 10px;
                         margin-right: 20px;
-                        margin-bottom: 20px;
                         width: 20px;
                         margin-left: auto;
                         margin-top: auto;
